--- a/platformio.ini
+++ b/platformio.ini
@@ -13,16 +13,19 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 upload_speed = 921600
-monitor_speed = 115200 ;9600
-src_filter = +<*> -<SourceStorage/>
+monitor_speed = 115200
+build_src_filter = +<*> -<SourceStorage/>
 debug_init_break = tbreak setup
 debug_tool = esp-prog
 build_type = debug
 monitor_filters = colorize
-            esp8266_exception_decoder
-;lib_extra_dirs = ~/Documents/Arduino/libraries
-lib_deps =  JsonStreamingParser
-            git+https://github.com/tzapu/WiFiManager.git#master
-            ArduinoJson
-            PubSubClient
-;            AsyncMqttClient
+	esp8266_exception_decoder
+lib_deps =
+	JsonStreamingParser
+	ArduinoJson
+	PubSubClient
+	ayushsharma82/WebSerial@^1.3.0
+	#alanswx/ESPAsyncWiFiManager@^0.31
+	me-no-dev/ESP Async WebServer@^1.2.3
+	https://github.com/ovidiupruteanu/WiFiManager.git#feature_asyncwebserver
+
